[gd_scene load_steps=9 format=3 uid="uid://bf1r7j2wdhh0k"]

[ext_resource type="Script" path="res://components/piggy/piggy.gd" id="1_o4urt"]
[ext_resource type="Texture2D" uid="uid://d3p8w13n2bvdh" path="res://assets/images/game/piggy_silver_double.png" id="2_n7l27"]
[ext_resource type="AudioStream" uid="uid://chtjs54f57w21" path="res://assets/sounds/piggy_flip.mp3" id="3_xvfmu"]
[ext_resource type="Texture2D" uid="uid://bnr26msoiotma" path="res://assets/images/game/accessories/shades.png" id="4_ahvfm"]
[ext_resource type="Texture2D" uid="uid://cluidvbo8qr8o" path="res://assets/images/game/accessories/americanHat.png" id="5_kyhes"]
[ext_resource type="Texture2D" uid="uid://bhnlywonsdh4p" path="res://assets/images/game/accessories/convincingMustache.png" id="6_htpg8"]
[ext_resource type="Texture2D" uid="uid://p1yqn62075e1" path="res://assets/images/game/accessories/awardRibbon.png" id="7_4kbie"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oj5t8"]
size = Vector2(192, 268)

[node name="Piggy" type="CharacterBody2D"]
position = Vector2(250, 371)
script = ExtResource("1_o4urt")

[node name="PiggySprite" type="Sprite2D" parent="."]
position = Vector2(0, -4.5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_n7l27")

[node name="PiggyCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-45, -375)
shape = SubResource("RectangleShape2D_oj5t8")

[node name="PiggyFlipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xvfmu")
bus = &"SFX"

[node name="EquipmentSlots" type="Sprite2D" parent="."]

[node name="EyesSlot" type="Sprite2D" parent="EquipmentSlots"]
position = Vector2(0, -4.5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_ahvfm")

[node name="HatSlot" type="Sprite2D" parent="EquipmentSlots"]
position = Vector2(0, -4.5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_kyhes")

[node name="MustacheSlot" type="Sprite2D" parent="EquipmentSlots"]
position = Vector2(0, -4.5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_htpg8")

[node name="ChestawardSlot" type="Sprite2D" parent="EquipmentSlots"]
position = Vector2(0, -4.5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_4kbie")
